hphp/hack/test/typecheck/inout/bad_inout_use_this.php.exp
File "bad_inout_use_this.php", line 9, characters 13-17:
Cannot assign a value to $this (Typing[4134])
